# OMEGALib

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: tree_inference.h
include/omega/: feature_extractor.h  ground_truth.h  model_manager.h  omega_api.h  omega_trainer.h  profiling_timer.h  search_context.h  tree_inference.h
src/: feature_extractor.cpp  ground_truth.cpp  lightgbm_network_stubs.cpp  model_manager.cpp  omega_api.cpp  omega_trainer.cpp  search_context.cpp  tree_inference.cpp
tests/: feature_extractor_test.cpp  model_manager_test.cpp  search_context_test.cpp  tree_inference_test.cpp
